# vulkan

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json
include/: base.h  config.h  debugUtils.h  instance.h  pch.h  surface.h  triangle.h
include/common/: imageViewCreateInfo.h  queueFamilyIndices.h  swapchainSupportDetails.h
include/core/: commandBuffer.h  commandPool.h  device.h  framebuffer.h  imageView.h  instance.h  pipeline.h  queueFamilyIndices.h  renderPass.h  shaderModule.h  surface.h  swapchain.h
include/utils/: fileUtils.h
src/: base.cpp  debugUtils.cpp  device.cpp  instance.cpp  main.cpp  surface.cpp  triangle.cpp
src/core/: commandBuffer.cpp  commandPool.cpp  device.cpp  framebuffer.cpp  imageView.cpp  instance.cpp  pipeline.cpp  renderPass.cpp  shaderModule.cpp  surface.cpp  swapchain.cpp
src/utils/: fileUtils.cpp
